--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ a{
 
 .left-container{
     width: 650px;
+    height: 100%;
     display: inline-block;
     background-color: white;
     border: solid 1px #4b4c4f;
@@ -158,4 +159,22 @@ hr{
      font-family: 'Georgia', Times, Times New Roman, serif;
      text-align: center;
      
+}
+
+/* FORM AREA */
+
+form{
+    margin: 30px 30px;
+}
+
+.form-text{
+   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
+}
+
+footer{
+    height: 50px;
+    width: 100%;
+    background-color: #666;
+    position: fixed;
+    bottom: 0;
 }
