--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 body{
     margin: 0 0 0 0;
-    background-image: url(../images/ep_naturalwhite.png)
+    background-image: url(../images/ep_naturalwhite.png);
 }
 
 /* NAV BAR */
@@ -171,10 +171,20 @@ form{
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
 }
 
-footer{
+.footer{
     height: 50px;
     width: 100%;
     background-color: #666;
-    position: fixed;
-    bottom: 0;
+    margin-top: 15%;
+    border-top: solid 5px #4aaaa5;
+    display: block;
+}
+
+.footer-text{
+    font-family: font-family: 'Georgia', Times, Times New Roman, serif;
+    margin-left: auto;
+    margin-left: auto;
+    text-align: center;
+    margin-bottom: 0;
+    
 }
