--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,14 @@ body{
     background-image: url(../images/ep_naturalwhite.png);
 }
 
+.social-link{
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    border-left: none;
+}
+
 /* NAV BAR */
+
 nav{
     width:100%;
     height: 85px;
@@ -178,6 +185,7 @@ form{
     margin-top: 15%;
     border-top: solid 5px #4aaaa5;
     display: block;
+    margin-bottom: 0;
 }
 
 .footer-text{
